[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Objects/Barricade.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Barricade" type="Area2D"]
script = ExtResource( 2 )

[node name="Box" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
hframes = 30
region_enabled = true
region_rect = Rect2( 0, 64, 960, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( 0, 0, 32, 32 )

[connection signal="body_entered" from="." to="." method="_on_Barricade_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
